feat(backend): implement document, category, and sharing modules