@@ -18,6 +18,7 @@ import java.util.stream.Collectors;
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class CategoryService {
     CategoryRepository categoryRepository;
+    CategoryMapper categoryMapper;
 
     @Transactional
     public CategoryResponse createCategory(CategoryRequest request) {
@@ -25,25 +26,23 @@ public class CategoryService {
             throw new AppException(ErrorCode.CATEGORY_EXISTED);
         }
 
-        Category category = Category.builder()
-                .name(request.getName())
-                .description(request.getDescription())
-                .build();
+        Category category = categoryMapper.toCategory(request);
 
         Category savedCategory = categoryRepository.save(category);
-        return toCategoryResponse(savedCategory);
+        return categoryMapper.toCategoryResponse(savedCategory);
     }
 
     public List<CategoryResponse> getAllCategories() {
-        return categoryRepository.findAll().stream()
-                .map(this::toCategoryResponse)
-                .collect(Collectors.toList());
+        return categoryRepository.findAll()
+                .stream()
+                .map(categoryMapper::toCategoryResponse)
+                .toList();
     }
 
     public CategoryResponse getCategoryById(Long id) {
         Category category = categoryRepository.findById(id)
                 .orElseThrow(() -> new AppException(ErrorCode.CATEGORY_NOT_FOUND));
-        return toCategoryResponse(category);
+        return categoryMapper.toCategoryResponse(category);
     }
 
     @Transactional
@@ -58,11 +57,10 @@ public class CategoryService {
                     }
                 });
 
-        category.setName(request.getName());
-        category.setDescription(request.getDescription());
+        categoryMapper.updateCategory(category, request);
 
         Category updatedCategory = categoryRepository.save(category);
-        return toCategoryResponse(updatedCategory);
+        return categoryMapper.toCategoryResponse(updatedCategory);
     }
 
     @Transactional
@@ -72,13 +70,4 @@ public class CategoryService {
         categoryRepository.delete(category);
     }
 
-    public CategoryResponse toCategoryResponse(Category category) {
-        return CategoryResponse.builder()
-                .id(category.getId())
-                .name(category.getName())
-                .description(category.getDescription())
-                .createdAt(category.getCreatedAt())
-                .updatedAt(category.getUpdatedAt())
-                .build();
-    }
 }
